gobject/gsignal.c
@@ -596,7 +596,7 @@ handler_ref (Handler *handler)
 {
   g_return_if_fail (handler->ref_count > 0);
   
-  g_atomic_int_inc ((int *)&handler->ref_count);
+  handler->ref_count++;
 }
 
 static inline void
@@ -604,13 +604,11 @@ handler_unref_R (guint    signal_id,
 		 gpointer instance,
 		 Handler *handler)
 {
-  gboolean is_zero;
-
   g_return_if_fail (handler->ref_count > 0);
-  
-  is_zero = g_atomic_int_dec_and_test ((int *)&handler->ref_count);
 
-  if (G_UNLIKELY (is_zero))
+  handler->ref_count--;
+
+  if (G_UNLIKELY (handler->ref_count == 0))
     {
       HandlerList *hlist = NULL;
 
